--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-.main-content__title{
-  font-family: Roboto, sans-serif;
-}
+
 .body{
   margin: 0;
 }
@@ -11,7 +9,7 @@
 .header{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 100px;
+  margin-bottom: 127px;
 }
 .logo{
   position: relative;
@@ -43,7 +41,7 @@
 }
 .menu__item{
   position: relative;
-  margin-right: 26px;
+  margin-right: 28px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000;
   text-decoration: none;
@@ -73,26 +71,31 @@
   width: 100%;
 }
 .main{
-  padding: 0 63% 100px 0;
-  background: top right no-repeat url(img/mainImg.svg);
+  padding: 0 63% 250px 0;
+  background: top right no-repeat url(img/main.svg);
+  background-position: 758px 3px
 }
 .main__title{
- margin: 0 0 40px 0;
- font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
+ margin: 0 0 36px 0;
+ font-style: normal;
+ font: bold 66px/87px pt_serif, arial, helvetica, sansserif;
+ padding: 76px 0 0 0;
 }
 .main__title_highlight{
   background: #ECF3FF;
 }
 .main__subtitle{
-  margin: 0 0 41px 0;
-  font: 18px/21px Roboto, arial, helvetica, sans-serif;
+  margin: 0 0 36px 0;
+  width: 455px;
+  height: 52px;
+  font: 22px/26px Roboto, arial, helvetica, sans-serif;
 }
 .main__button{
   display: inline-block;
-  font: 14px/16px Roboto, arial, helvetica, sans-serif;
+  font: 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #fff;
   background: #0056EC;
-  padding: 14px 16px;
+  padding: 15px 45px 19px 12px;
   text-decoration: none;
   border-radius: 4px;
   transition: opacity .5s;
