--- a/style.css
+++ b/style.css
@@ -42,9 +42,11 @@
 .menu__item{
   position: relative;
   margin-right: 28px;
+  margin-top: 5px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000;
   text-decoration: none;
+  transition: opacity 0.5s;
 }
 .menu__item:last-child{
   margin-right: 0;
@@ -103,3 +105,237 @@
 .main__button:hover{
   opacity: .5;
 }
+#menu__toggle {
+  display: none;
+}
+
+
+@media (max-width: 1367px) {
+  .wrapper {
+    margin: auto;
+    width: 69%;
+  }
+
+  .menu__item {
+    position: relative;
+    margin-right: 6px 27px 0 0;
+    font: 500 14px/17px Roboto, arial, helvetica, sans-serif;
+  }
+
+  .menu__item:last-child {
+    margin-right: 10px;
+  }
+
+  .menu__item:first-child {
+    margin-right: 23px;
+  }
+
+  .header {
+    margin-bottom: 9px;
+  }
+
+  .logo {
+    position: relative;
+    padding: 35px 51px;
+  }
+
+  .main {
+    margin-left: 8px;
+    padding: 20px 57% 136px 0;
+    background: center right no-repeat url(img/main.svg);
+    background-size: 519px 440px;
+  }
+
+  .main__title {
+    margin: 0 0 43px 0;
+    font: 50px/64px pt_serifbold, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    margin: 0 0 29px 0;
+    padding-right: 40px;
+    font: 18px/20px Roboto, arial, helvetica, sans-serif;
+  }
+
+  .main__button {
+    font: 14px Roboto, arial, helvetica, sans-serif;
+    padding: 14px 21px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .wrapper {
+    width: 92%;
+  }
+
+  .menu__item {
+    margin-right: 26px;
+    margin-top: 6px;
+    font: 500 14px/17px Roboto, arial, helvetica, sans-serif;
+  }
+
+  .menu__item:last-child {
+    margin-right: 1px;
+  }
+
+  .menu__item:first-child {
+    margin-right: 24px;
+  }
+
+  .header {
+    margin-bottom: 9px;
+  }
+
+  .logo {
+    padding-left: 45px;
+  }
+
+  .main {
+    margin-left: 0;
+    padding: 20px 57% 136px 0;
+    background-size: 515px 439px;
+  }
+
+  .main__title {
+    margin: 0 0 43px 0;
+    font: 50px/64px pt_serifbold, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    margin-bottom: 38px;
+    padding-right: 40px;
+    max-width: 90%;
+    font: 18px/23px Roboto, arial, helvetica, sans-serif;
+  }
+
+  .main__button {
+    padding: 14px 20px;
+  }
+}
+@media (max-width: 875px) {
+  .wrapper {
+    width: 92%;
+  }
+
+  .logo__none {
+    display: none;
+  }
+
+  .logo__circle_color_dark-blue,
+  .logo__circle_color_blue {
+    margin-left: 0;
+  }
+
+  .header {
+    margin-bottom: 8px;
+  }
+
+  .main {
+    text-align: center;
+    padding: 80% 0 0;
+    background-size: 280px 238px;
+    background-position: top center;
+  }
+
+  .main__title {
+    margin-top: -75px;
+    margin-bottom: 10%;
+    font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    margin-bottom: 28px;
+    max-width: 70%;
+    margin-left: 40px;
+    font: 15px/19px Roboto, arial, helvetica, sans-serif;
+  }
+
+  .main__button {
+    font-size: 14px;
+    padding: 14px 20px;
+  }
+
+  .menu__button {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 4%;
+    left: 87%;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  .menu__button > span,
+  .menu__button > span::before,
+  .menu__button > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #0056ec;
+  }
+
+  .menu__button > span::before {
+    content: '';
+    top: -8px;
+  }
+
+  .menu__button > span::after {
+    content: '';
+    top: 8px;
+  }
+
+  .menu {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    list-style: none;
+    text-align: center;
+    background-color: #eceff1;
+    box-shadow: 1px 0 6px rgba(0, 0, 0, 0.2);
+    transition-duration: 0.5s;
+  }
+
+  .menu__item {
+    display: block;
+    color: #333;
+    margin: 0 0 40px 0;
+    font: 500 30px/21px Roboto, arial, helvetica, sans-serif;
+    text-decoration: none;
+    transition-duration: 0.5s;
+  }
+
+  .menu__item:first-child {
+    margin-right: 0;
+    margin-top: 51%;
+  }
+
+  #menu__toggle:checked ~ .menu__button > span {
+    transform: rotate(45deg);
+  }
+
+  #menu__toggle:checked ~ .menu__button > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+
+  #menu__toggle:checked ~ .menu__button > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+
+  #menu__toggle:checked ~ .menu {
+    visibility: visible;
+    left: 0;
+  }
+}
+
+
+
