--- a/style.css
+++ b/style.css
@@ -92,6 +92,12 @@
   height: 52px;
   font: 22px/26px Roboto, arial, helvetica, sans-serif;
 }
+
+@keyframes flash{
+  to{
+    color:#52d2bc;
+  }
+}
 .main__button{
   display: inline-block;
   font: 18px/21px Roboto, arial, helvetica, sans-serif;
@@ -101,6 +107,7 @@
   text-decoration: none;
   border-radius: 4px;
   transition: opacity .5s;
+  animation: flash .9s infinite ease-in-out;
 }
 .main__button:hover{
   opacity: .5;
@@ -108,7 +115,6 @@
 #menu__toggle {
   display: none;
 }
-
 
 @media (max-width: 1367px) {
   .wrapper {
