--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@
 .header{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 113px;
+  margin-bottom: 117px;
 }
 .logo{
   position: relative;
   padding: 40px 0;
   padding-left: 44px;
+  margin-top: -6px;
   font: bold 24px/31px pt_serifbold, arial, helvetica, sans-serif;
 }
 .logo__circle{
@@ -37,6 +38,7 @@
 .menu{
   display: flex;
   align-items: center;
+  margin-top: -1px;
 }
 .menu__item{
   position: relative;
@@ -48,7 +50,7 @@
   transition: opacity 0.5s;
 }
 .menu__item:last-child{
-  margin-right: 10px;
+  margin-right: 7px;
 }
 .menu__item:hover{
   opacity: .5;
@@ -74,13 +76,12 @@
 .main{
   padding: 0 63% 250px 0;
   background: top right no-repeat url(img/main.svg);
-  background-position: 758px 3px
 }
 .main__title{
- margin: 0 0 36px 0;
+ margin: 0 0 40px 0;
  font-style: normal;
  font: bold 66px/87px pt_serifbold, arial, helvetica, sansserif;
- padding: 76px 0 0 0;
+ padding: 85px 0 0 0;
 }
 .main__title_highlight{
   background: #ECF3FF;
@@ -101,7 +102,7 @@
   font: 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #fff;
   background: #0056EC;
-  padding: 15px 45px 19px 12px;
+  padding: 19px 40px 18px 17px;
   text-decoration: none;
   border-radius: 4px;
   transition: opacity .5s;
@@ -124,20 +125,31 @@
     font: 500 14px/17px Roboto, arial, helvetica, sans-serif;
   }
   .menu__item:last-child {
-    margin-right: 10px;
+    margin-right: 5px;
   }
   .menu__item:first-child {
-    margin-right: 23px;
+    margin-right: 27px;
   }
   .header {
     margin-bottom: 9px;
   }
   .logo {
     position: relative;
-    padding: 35px 51px;
+    padding: 35px 49px;
+  }
+  .logo__circle{
+    left: 1%;
+    top: 46%;
+  }
+  .logo__circle_color_blue{
+    left: 10px;
+    top: 50%;
+  }
+  .logo__none{
+    left: 1%;
+    top: 46%;
   }
   .main {
-    margin-left: 8px;
     padding: 20px 57% 136px 0;
     background: center right no-repeat url(img/main.svg);
     background-size: 519px 440px;
@@ -154,7 +166,7 @@
   }
   .main__button {
     font: 14px Roboto, arial, helvetica, sans-serif;
-    padding: 14px 21px;
+    padding: 14px 25px 14px 20px;
   }
 }
 @media (max-width: 1025px) {
@@ -170,13 +182,21 @@
     margin-right: 1px;
   }
   .menu__item:first-child {
-    margin-right: 24px;
+    margin-right: 30px;
   }
   .header {
     margin-bottom: 9px;
   }
   .logo {
     padding-left: 45px;
+  }
+  .logo__circle{
+    left: -1%;
+    top: 46%;
+  }
+  .logo__circle_color_blue{
+    left: 8px;
+    top: 50%;
   }
   .main {
     margin-left: 0;
@@ -188,14 +208,13 @@
     font: 50px/64px pt_serifbold, arial, helvetica, sans-serif;
   }
   .main__subtitle {
-    margin-bottom: 38px;
-    padding-right: 40px;
-    max-width: 90%;
-    font: 18px/23px Roboto, arial, helvetica, sans-serif;
-  }
-  .main__button {
-    padding: 14px 20px;
-  }
+   padding-right: 40px;
+   max-width: 90%;
+   font: 18px/23px Roboto, arial, helvetica, sans-serif;
+ }
+ .main__button {
+  padding: 14px 25px 14px 15px;
+}
 }
 @media (max-width: 875px) {
   .wrapper {
@@ -203,6 +222,14 @@
   }
   .logo__none {
     display: none;
+  }
+  .logo__circle{
+    left: 3%;
+    top: 42%;
+  }
+  .logo__circle_color_blue{
+    left: 10px;
+    top: 50%;
   }
   .logo__circle_color_dark-blue,
   .logo__circle_color_blue {
@@ -213,24 +240,25 @@
   }
   .main {
     text-align: center;
-    padding: 80% 0 0;
-    background-size: 280px 238px;
+    padding: 65% 0 0;
+    background-size: 780px 368px;
     background-position: top center;
   }
   .main__title {
-    margin-top: -75px;
-    margin-bottom: 10%;
+    margin-top: -76.5px;
+    margin-left: 12px;
+    margin-bottom: 5%;
     font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
   }
   .main__subtitle {
-    margin-bottom: 28px;
-    max-width: 70%;
-    margin-left: 40px;
-    font: 15px/19px Roboto, arial, helvetica, sans-serif;
+    max-width: 80%;
+    margin-left: 158px;
+    font: 15px/16px Roboto, arial, helvetica, sans-serif;
+    
   }
   .main__button {
     font-size: 14px;
-    padding: 14px 20px;
+    padding: 14px 25px 14px 18px;
   }
   .menu__button {
     display: flex;
@@ -301,6 +329,94 @@
   #menu__toggle:checked ~ .menu {
     visibility: visible;
     left: 0;
+  }
+}
+@media (max-width: 820px) {
+  .main__subtitle {
+    max-width: 80%;
+    margin-left: 135px;
+    font: 15px/16px Roboto, arial, helvetica, sans-serif;    
+  }
+}
+@media (max-width: 780px) {
+  .main{
+    background-size: 480px 338px;
+  }
+  .main__subtitle {
+    max-width: 80%;
+    margin-left: 125px;
+    font: 15px/16px Roboto, arial, helvetica, sans-serif;    
+  }
+}
+@media (max-width: 690px) {
+  .main__subtitle {
+    max-width: 80%;
+    margin-left: 85px;
+    font: 15px/16px Roboto, arial, helvetica, sans-serif;    
+  }
+}
+@media (max-width: 650px) {
+  .main{
+    background-size: 420px 278px;
+  }
+  .main__subtitle {
+    max-width: 80%;
+    margin-left: 75px;
+    font: 15px/16px Roboto, arial, helvetica, sans-serif;    
+  }
+}
+@media (max-width: 550px) {
+  .main__subtitle {
+    max-width: 80%;
+    margin-left: 55px;
+    font: 15px/16px Roboto, arial, helvetica, sans-serif;    
+  }
+}
+@media (max-width: 475px) {
+  .wrapper {
+    width: 92%;
+  }
+  .logo__none {
+    display: none;
+  }
+  .logo__circle{
+    left: 3%;
+    top: 42%;
+  }
+  .logo__circle_color_blue{
+    left: 10px;
+    top: 50%;
+  }
+  .logo__circle_color_dark-blue,
+  .logo__circle_color_blue {
+    margin-left: 0;
+  }
+  .header {
+    margin-bottom: 8px;
+  }
+  .main {
+    text-align: center;
+    padding: 80% 0 0;
+    background-size: 280px 238px;
+    background-position: top center;
+  }
+  .main__title {
+    margin-top: -76.5px;
+    margin-left: 12px;
+    margin-bottom: 10%;
+    font: bold 30px/39px pt_serifbold, arial, helvetica, sans-serif;
+  }
+  .main__subtitle {
+    margin-bottom: 28px;
+    max-width: 73%;
+    margin-left: 48px;
+    font: 15px/16px Roboto, arial, helvetica, sans-serif;
+    line-height: 1.2;
+    letter-spacing: 0.39px;
+  }
+  .main__button {
+    font-size: 14px;
+    padding: 14px 25px 14px 18px;
   }
 }
 
