--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
   width: 100%;
 }
 .main{
-  padding: 0 63% 250px 0;
+  padding: 0 63% 270px 0;
   background: top right no-repeat url(img/main.svg);
 }
 .main__title{
@@ -114,6 +114,26 @@
 #menu__toggle {
   display: none;
 }
+.bottom{
+  position: relative;
+  margin-bottom: 15px;
+}
+.bottom__circle{
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background: #C8DBFB;
+  border-radius: 50%;
+}
+.bottom__circle_left{
+  left: calc(50% - 8px/2 - 12px);
+}
+.bottom__circle_center{
+  left: calc(50% - 8px/2);
+}
+.bottom__circle_right{
+  left: calc(50% - 8px/2 + 12px);
+}
 @media (max-width: 1367px) {
   .wrapper {
     margin: auto;
@@ -121,7 +141,7 @@
   }
   .menu__item {
     position: relative;
-    margin-right: 6px 27px 0 0;
+    margin: 6px 27px 0 0;
     font: 500 14px/17px Roboto, arial, helvetica, sans-serif;
   }
   .menu__item:last-child {
@@ -150,7 +170,7 @@
     top: 46%;
   }
   .main {
-    padding: 20px 57% 136px 0;
+    padding: 20px 57% 145px 0;
     background: center right no-repeat url(img/main.svg);
     background-size: 519px 440px;
   }
@@ -200,7 +220,7 @@
   }
   .main {
     margin-left: 0;
-    padding: 20px 57% 136px 0;
+    padding: 20px 57% 145px 0;
     background-size: 515px 439px;
   }
   .main__title {
@@ -330,6 +350,9 @@
     visibility: visible;
     left: 0;
   }
+  .bottom{
+    display: none;
+  }
 }
 @media (max-width: 820px) {
   .main__subtitle {
@@ -419,6 +442,3 @@
     padding: 14px 25px 14px 18px;
   }
 }
-
-
-
